syntax = "proto3";
//import "google/protobuf/timestamp.proto";
import "status.proto";
option go_package = "proto";


service Problems {
    rpc CreateProblem (CreateProblemRequest) returns (CreateProblemResponse);
    rpc FetchProblem (FetechProblemRequest) returns (FetchProblemResponse);
}


message CreateProblemRequest {
    Problem problem = 1;
}

message CreateProblemResponse {
    Status status = 1;
}

message FetechProblemRequest {
    uint64 pid = 1;
}

message FetchProblemResponse {
    Problem problem = 1;
}


message Problem {
    uint64 pid = 1;
    string title = 2;
    uint64 time_limit = 3;
    uint64 memory_limit = 4;
    string description = 5;
    string input_format = 6;
    string output_format = 7;
    string example = 8;
    string hint_and_limit = 9;
    uint64 publicizer_id = 10;
    string file_io_input_name = 11;
    string file_io_output_name = 12;
}



